[tool.poetry]
name = "edge-tts-master"
version = "0.1.0"
description = ""
authors = ["ZzKaiJun <riderheg6411@tiongliong.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
edge-tts = "^6.1.12"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
